--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,5 @@
 /*********NAVBAR*********/
-.ham-burger .fa{
+.ham-burger .fa {
   font-size: 20px;
   height: 27px;
   width: 35px;
@@ -13,23 +13,25 @@
   display: none;
 }
 
-@media(max-width: 900px){
+@media(max-width: 900px) {
 
-  header{
+  header {
     padding: 15px;
     position: fixed;
     background: rgba(0, 0, 0, 0.9);
-    z-index:10;
+    z-index: 10;
   }
-header img {
-height: 45px;
-}
- .ham-burger .fa{
-  display:inline-block;
-}
 
-.navbar{
-    position:absolute;
+  header img {
+    height: 45px;
+  }
+
+  .ham-burger .fa {
+    display: inline-block;
+  }
+
+  .navbar {
+    position: absolute;
     width: 100%;
     left: 0px;
     top: 75px;
@@ -38,159 +40,166 @@ height: 45px;
     display: none;
   }
 
-  .navbar.show{
-  display: block;
+  .navbar.show {
+    display: block;
   }
 
   header .navbar ul li {
-   display: block;
-   margin-left: 0;
+    display: block;
+    margin-left: 0;
   }
 
-  header .navbar ul li a{
-   line-height: 42px;
+  header .navbar ul li a {
+    line-height: 42px;
   }
-.to_top{
-  display: none;
-}
+
+  .to_top {
+    display: none;
+  }
 }
 
 /*LANDING SCREEN*/
 
-@media(max-width: 550px){
-.home .homecontent .block h6{
-  font-size:  12px;
-}
-.home .homecontent .block h1{
-  font-size:  50px;
-}
-.home .homecontent .block h4{
-  font-size:  20px;
-}
+@media(max-width: 550px) {
+  .home .homecontent .block h6 {
+    font-size: 12px;
+  }
+
+  .home .homecontent .block h1 {
+    font-size: 50px;
+  }
+
+  .home .homecontent .block h4 {
+    font-size: 20px;
+  }
 
 }
 
 
-@media(max-width: 700px){
+@media(max-width: 700px) {
 
-.about  .aboutcontent .pic{
-flex:0 0 100%;
- max-width: 100%;
- padding: 30px;
+  .about .aboutcontent .pic {
+    flex: 0 0 100%;
+    max-width: 100%;
+    padding: 30px;
+  }
+
+  .about .aboutcontent .text {
+    flex: 0 0 100%;
+    max-width: 100%;
+    padding: 15px;
+  }
+
+  .about .aboutcontent .text h1 {
+    text-align: center;
+  }
+
+  .about .aboutcontent .text p {
+    text-align: center;
+  }
 }
 
-.about  .aboutcontent .text {
- flex:0 0 100%;
- max-width: 100%;
- padding: 15px;
-}
-.about  .aboutcontent .text h1{
-text-align: center; 
-}
-.about  .aboutcontent .text p{
-text-align:   center; 
-}
-}
+@media(max-width: 1000px) {
 
-@media(max-width: 1000px){
+  .vision .visioncontent .box1 {
+    margin-right: 40%;
+  }
 
-.vision  .visioncontent .box1{
-  margin-right: 40%;
-}
+  .vision .visioncontent .box2 {
+    margin-left: 55%;
+  }
 
-.vision  .visioncontent .box2{
-   margin-left: 55%;
-}
-
-.vision  .visioncontent h2{
-  font-size:40px;
-}
-
-}
-
-
-@media(max-width: 800px){
-
-.vision  .visioncontent{
-  padding: 0 30px 0;
-}
-
-.vision  .visioncontent img{
-  padding: 5px;
-  height: 35px;
-}
-
-.vision  .visioncontent .box1{
-  margin-right: 0%;
-  margin-left: 0px;
-}
-
-.vision  .visioncontent .box2{
-   margin-left: 0%;
-}
-.vision  .visioncontent .right{
-   text-align:left;
-}
-
-
-.vision  .visioncontent p{
-padding-bottom: 30px;
-}
-
-.vision .visioncontent p::before{
-height: 2px;
-width: 40px;
-}
+  .vision .visioncontent h2 {
+    font-size: 40px;
+  }
 
 }
 
 
-@media(max-width: 720px){
+@media(max-width: 800px) {
 
-.work .workcontent .box{
-  flex: 0 0 100%;
-  max-width: : 0 0 100%;
- }
+  .vision .visioncontent {
+    padding: 0 30px 0;
+  }
 
-.quote .quotecontent p{
-  font-size: 20px;
+  .vision .visioncontent img {
+    padding: 5px;
+    height: 35px;
+  }
+
+  .vision .visioncontent .box1 {
+    margin-right: 0%;
+    margin-left: 0px;
+  }
+
+  .vision .visioncontent .box2 {
+    margin-left: 0%;
+  }
+
+  .vision .visioncontent .right {
+    text-align: left;
+  }
+
+
+  .vision .visioncontent p {
+    padding-bottom: 30px;
+  }
+
+  .vision .visioncontent p::before {
+    height: 2px;
+    width: 40px;
+  }
+
 }
 
 
-.contact .left{
-  flex: 0 0 100%;
-  max-width: 100%; 
-}
-.contact .right{
-  flex: 0 0 100%;
-  max-width: 100%; 
-  padding-top: 50px;
-}
+@media(max-width: 720px) {
 
-.mahe{
-  padding-top: 10px;
-}
-.mahe img{
-height: 35px;
-}
+  .work .workcontent .box {
+    flex: 0 0 100%;
+    max-width: 0 0 100%;
+  }
+
+  .quote .quotecontent p {
+    font-size: 20px;
+  }
 
 
-.name{
- text-align:center;
-}
-}
+  .contact .left {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+
+  .contact .right {
+    flex: 0 0 100%;
+    max-width: 100%;
+    padding-top: 50px;
+  }
+
+  .mahe {
+    padding-top: 10px;
+  }
+
+  .mahe img {
+    height: 35px;
+  }
 
 
-@media(max-width: 900px){
+  .name {
+    text-align: center;
+  }
 
-.vedanth .v{
-  font-size: 40px;
-}
 
-.vedanth .text{
-  flex: 0 0 100%;
-  max-width: 100%;
-  font-size: 15px;
-}
-}
 
+  @media(max-width: 900px) {
+
+    .vedanth .v {
+      font-size: 40px;
+    }
+
+    .vedanth .text {
+      flex: 0 0 100%;
+      max-width: 100%;
+      font-size: 15px;
+    }
+  }
