--- a/css/Robocup2024style.css
+++ b/css/Robocup2024style.css
@@ -1,10 +1,36 @@
 .info_space {
     text-align: center;
-    background-color: black;
+    background-color: white;
+    padding: 10px 10px 50px 10px;
+    
+
 }
 
 .info_space h1 {
-    color: white;
-    padding: 20px;
+    font-size: 40px;
+    padding-top: 20px;
+    color: black;
     display: inline-block;
+}
+
+.info_space hr {
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
+
+.info_space p {
+    margin: 0px 30px;
+    padding-bottom: 20px;
+    font-size: 15px;
+    text-align: justify;
+    justify-content: center;
+}
+
+.info_space video {
+    margin: 10px 10px 10px 10px;
+    max-width: 70%;
+    width: 100%;
+    background-color: black;
 }
