--- a/css/Robocup2024style.css
+++ b/css/Robocup2024style.css
@@ -32,3 +32,32 @@
     width: 100%;
     background-color: black;
 }
+
+.info_space h2 {
+    margin-bottom: 20px;
+    margin-top: 10px;
+    text-align: left;
+    margin-left: 30px;
+}
+
+.video_container {
+    padding: 30px 30px 30px 30px;
+}
+
+.video {
+    position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%; 
+}
+
+.video iframe {
+position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+
+}
